--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Giochi
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0 mt-0 pt-0 rounded-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -55,7 +55,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Hardware
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0 mt-0 pt-0 rounded-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -71,7 +71,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Servizi
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0 mt-0 pt-0 rounded-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -87,7 +87,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       novit&abreve;
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0 mt-0 pt-0 rounded-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -103,7 +103,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Fai acquisti
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0 mt-0 pt-0 rounded-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -119,7 +119,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Supporto
                     </a>
-                    <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu w-100 list-inline text-center border-0 mt-0 pt-0 rounded-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -139,7 +139,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           My PlayStation
                         </a>
-                        <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
+                        <ul class="dropdown-menu w-100 list-inline text-center border-0 mt-0 pt0 rounded-0" aria-labelledby="navbarDropdownMenuLink">
                           <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                           <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                           <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -231,24 +231,34 @@
         </div>
         <div class="row gadget-ps5 text-center mb-4">
           <div class="col-4 col-md-2 ">
-            <img class="w-100 mb-1" src="img/playstation-5-thumb.png" alt="ps5">
-            <h6 class="d-none d-md-block smaller-text">Console <span class="text-uppercase">ps5</span></h6>
+            <div class="img-container">
+              <img class="w-100 mb-1 opacity-60" src="img/playstation-5-thumb.png" alt="ps5">
+              <h6 class="d-none d-md-block smaller-text">Console <span class="text-uppercase">ps5</span></h6>
+            </div>
           </div>
           <div class="col-4 col-md-2 ">
-            <img class="w-100 mb-1" src="img/joypad-thumb.png" alt="joystick">
-            <h6 class="d-none d-md-block smaller-text">Controller wireless <span class="trademark">DualSense</span></h6>
+            <div class="img-container">
+              <img class="w-100 mb-1 opacity-60" src="img/joypad-thumb.png" alt="joystick">
+              <h6 class="d-none d-md-block smaller-text">Controller wireless <span class="trademark">DualSense</span></h6>
+            </div>
           </div>
           <div class="col-4 col-md-2 ">
-            <img class="w-100 mb-1" src="img/headset-thumb.png" alt="headphones">
-            <h6 class="d-none d-md-block smaller-text">Cuffie wireless con microfono <span class="trademark text-uppercase">pulse 3</span></h6>
+            <div class="img-container">
+              <img class="w-100 mb-1 opacity-60" src="img/headset-thumb.png" alt="headphones">
+              <h6 class="d-none d-md-block smaller-text">Cuffie wireless con microfono <span class="trademark text-uppercase">pulse 3</span></h6>
+            </div>
           </div>
           <div class="col-4 col-md-2 ">
-            <img class="w-100 mb-1" src="img/remote-thumb.png" alt="console controller">
-            <h6 class="d-none d-md-block smaller-text">Telecomando Media</h6>
+            <div class="img-container">
+              <img class="w-100 mb-1 opacity-60" src="img/remote-thumb.png" alt="console controller">
+              <h6 class="d-none d-md-block smaller-text">Telecomando Media</h6>
+            </div>
           </div>
           <div class="col-4 col-md-2 ">
-            <img class="w-100 mb-1" src="img/camera-thumb.jpg" alt="webcam">
-            <h6 class="d-none d-md-block smaller-text">Telecamera <span class="text-uppercase">hd</span></h6>
+            <div class="img-container">
+              <img class="w-100 mb-1 opacity-60" src="img/camera-thumb.jpg" alt="webcam">
+              <h6 class="d-none d-md-block smaller-text">Telecamera <span class="text-uppercase">hd</span></h6>
+            </div>
           </div>
         </div>
       </div>
